--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "scriptable",
   "version": "1.0.0",
   "scripts": {
+    "build": "rollup --config",
     "icloud": "node deploy.js"
   },
   "eslintConfig": {
-    "parser": "@babel/eslint-parser",
-    "extends": "@scriptable-ios"
+    "extends": "@scriptable-ios",
+    "parserOptions": {
+      "sourceType": "module"
+    }
   },
   "babel": {
     "plugins": [
@@ -14,12 +17,13 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.14.3",
-    "@babel/eslint-parser": "^7.14.3",
-    "@babel/plugin-syntax-top-level-await": "^7.12.13",
+    "@rollup/plugin-eslint": "^8.0.1",
+    "@rollup/plugin-typescript": "^8.2.1",
     "@scriptable-ios/eslint-config": "latest",
     "@types/scriptable-ios": "latest",
     "eslint": "latest",
-    "shelljs": "^0.8.4"
+    "rollup": "^2.48.0",
+    "shelljs": "^0.8.4",
+    "typescript": "^4.2.4"
   }
 }
