--- a/scriptable-api/package.json
+++ b/scriptable-api/package.json
@@ -13,7 +13,7 @@
     "@material-ui/lab": "^4.0.0-alpha.58",
     "clsx": "^1.1.1",
     "highlight.js": "^10.7.2",
-    "next": "11.1.2",
+    "next": "^11.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "use-clipboard-copy": "^0.2.0",
