--- a/widgets/tsconfig.json
+++ b/widgets/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
-        "target": "ES2018",
+        "target": "es2019",
         "lib": [
-            "ES2018"
+            "es2019"
         ],
         "baseUrl": "./",
         "allowJs": true,
