updated data fetching

--- a/scriptable-api/public/compiled-widgets/widget-modules/UniswapPosition.WidgetModule.meta.json
+++ b/scriptable-api/public/compiled-widgets/widget-modules/UniswapPosition.WidgetModule.meta.json
@@ -1,10 +1,10 @@
 {
     "name": "Uniswap Position",
     "description": "View information about your Uniswap V3 positions.",
-    "paramLabel": "Your Ethereum wallet",
-    "paramPlaceHolder": "0xffffff",
+    "paramLabel": "Uniswap V3 pool ID (app.uniswap.org/#/pool/12345)",
+    "paramPlaceHolder": "12345",
     "loaderArgs": {
-        "iconColor": "orange",
+        "iconColor": "purple",
         "iconGlyph": "server"
     }
 }
